--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "server": "node server.js",
     "dev-server": "node dev-server.js",
     "dev": "webpack-dev-server --open --config webpack.dev.js",
-    "build": "webpack  --config webpack.dev.js"
+    "build": "webpack  --config webpack.prod.js"
   },
   "keywords": [
     "test"
@@ -18,12 +18,20 @@
   "author": "hyhweb",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^8.0.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.3.0",
     "express": "^4.17.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^6.1.0",
     "html-webpack-plugin": "^4.5.0",
+    "mini-css-extract-plugin": "^0.11.2",
+    "node-sass": "^4.14.1",
     "path": "^0.12.7",
+    "postcss-loader": "^4.0.2",
+    "sass-loader": "^10.0.2",
     "style-loader": "^1.2.1",
+    "url-loader": "^4.1.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-middleware": "^3.7.2",
